# FastAndRobustMeshArrangements

./: .gitignore  CMakeLists.txt  setup.py
public/: meshArrange.cpp  meshArrange.h
python/: example.py
python/meshArrange/: meshArrange.cpp  meshArrange.hpp
